Oops I forgot the Himalayas

--- a/asia-study-game/main.html
+++ b/asia-study-game/main.html
@@ -71,6 +71,7 @@
             <img src="sprites/chang_jiang_river.png" id="chang_jiang_river" class="landform">
             <img src="sprites/ganges_river.png" id="ganges_river" class="landform">
             <img src="sprites/gobi_desert.png" id="gobi_desert" class="landform">
+            <img src="sprites/himalayas.png" id="himalayas" class="landform">
             <img src="sprites/huang_he_river.png" id="huang_he_river" class="landform">
             <img src="sprites/indus_river.png" id="indus_river" class="landform">
         </div>
